# rust-template

./: .gitattributes  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md  cargo-generate.rhai  cargo-generate.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
licenses/: MIT
src/: main.rs
