[package]
name = "{{project-name | strip}}"
version = "1.0.0"
{%- if description != "" %}
description = "{{description | strip}}"
{%- endif %}
{%- if license != "None" %}
license = "{{license}}"
{%- endif %}
authors = ["{{username}}"]
{%- if repository != "" %}
repository = "{{repository | strip}}"
{%- endif %}
include = ["src", "README.md"{% if license != "None" %}, "LICENSE"{% endif %}]
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true
